<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_0"
        android:icon="@drawable/fridge_icon"
        android:title="@string/bottom_nav_item_0" />
    <item
        android:id="@+id/menu_item_1"
        android:icon="@drawable/grocery_icon"
        android:titleCondensed="Appts"
        android:title="@string/bottom_nav_item_1" />
    <item
        android:id="@+id/menu_item_2"
        android:icon="@drawable/recommend_icon"
        android:titleCondensed="Labs"
        android:title="@string/bottom_nav_item_2" />
    <item
        android:id="@+id/menu_item_3"
        android:icon="@drawable/more_icon"
        android:titleCondensed="Mail"
        android:title="@string/bottom_nav_item_3" />
</menu>